<resources>
    <string name="app_name">Bus Pass</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="history">"The Maharashtra State Road Transport Corporation is established by State Government of Maharashtra as per the provision in Section 3 of RTC Act 1950. The M.S.R.T.Corporation is operating it's services by the approved scheme of Road Transport Published vide Notification MVA 3173/30303-XIIA dated 29.11.1973 in the official gazette"</string>
    <string name="history2">"The area covered by the scheme is entire area of the State of Maharashtra."</string>
    <string name="history3">"First bus having been flagged off from the Pune to Ahmednagar in 1948."</string>
    <string name="history4">"The driver and conductor used to wear khaki uniforms and peak caps."</string>
    <string name="history5">"The ST started with 30 Bedford buses having wooden bodies, coir seats and the fare charged on the Pune-Nagar route was nine paisa."</string>

</resources>