<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="20dp"
        android:layout_margin="20dp"
        android:background="@drawable/white_background"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="How it Started ?"
            android:textAlignment="center"
            android:textColor="#A64CF5"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/oldbus" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/history"
            android:textAlignment="center"
            android:textColor="#F58B4C"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/history2"
            android:textColor="#4C8AF5"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history3"
            android:textSize="13sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="#F58B4C"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/history4"
            android:textAlignment="center"
            android:textColor="#4C8AF5"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history5"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="#F58B4C"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>
